feat: link component done

--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -118,7 +118,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 <AppProvider>
   <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+    <Table.THead>
       <Table.TR>
         <Table.TH>
           <Text>Prop</Text>
@@ -333,7 +333,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 <AppProvider>
   <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+    <Table.THead>
       <Table.TR>
         <Table.TH>
           <Text>Prop</Text>
