--- a/example/storybook/src/components/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Modal/index.stories.mdx
@@ -169,7 +169,7 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
 
 <AppProvider>
   <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+    <Table.THead>
       <Table.TR>
         <Table.TH>
           <Text>Prop</Text>
