--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -96,7 +96,7 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
 
 <AppProvider>
   <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+    <Table.THead>
       <Table.TR>
         <Table.TH>
           <Text>Prop</Text>
@@ -209,7 +209,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 <AppProvider>
   <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+    <Table.THead>
       <Table.TR>
         <Table.TH>
           <Text>Prop</Text>
