--- a/example/storybook/src/components/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Toast/index.stories.mdx
@@ -129,7 +129,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 <AppProvider>
   <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+    <Table.THead>
       <Table.TR>
         <Table.TH>
           <Text>Prop</Text>
