feat: refactored a lot of components

--- a/example/storybook/src/components/Input/index.stories.mdx
+++ b/example/storybook/src/components/Input/index.stories.mdx
@@ -290,7 +290,7 @@ We have a function called `createInput` which can be used to create a custom but
 
 ```jsx
 // import the styles
-import { Root, Input } from './components/Input';
+import { Root, Input } from '../ui-components/Input/styled-components';
 
 // import the createInput function
 import { createInput } from '@gluestack-ui/input';
