--- a/example/storybook/src/components/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/Avatar/index.stories.mdx
@@ -240,7 +240,13 @@ We have a function called `createAvatar` which can be used to create a custom av
 
 ```jsx
 // import the styles
-import { Root, Badge, Group, Image, FallbackText } from './components/Avatar';
+import {
+  Root,
+  Badge,
+  Group,
+  Image,
+  FallbackText,
+} from '../ui-components/Avatar/styled-components';
 
 // import the createAvatar function
 import { createAvatar } from '@gluestack-ui/avatar';
@@ -265,4 +271,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Avatar` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/avatar/index.tsx) of the styled `Avatar` components.
+Default styling of all these components can be found in the `components/Avatar` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Button/index.tsx) of the styled `Avatar` components.
