--- a/example/storybook/src/components/Center/index.stories.mdx
+++ b/example/storybook/src/components/Center/index.stories.mdx
@@ -103,7 +103,7 @@ For customizing the Center, you have to map styled view to Center. You can refer
 
 ```jsx
 // import the styles
-import { Root } from './components/Center';
+import { Root } from '../ui-components/Center/styled-components';
 
 // mapping the Center to root component
 const Center = Root;
@@ -116,4 +116,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `components/Center` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/center/index.tsx) of the styled `Center` component.
+Default styling of the component can be found in the `ui-components/Center` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Center/index.tsx) of the styled `Center` component.
