--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -587,7 +587,13 @@ We have a function called `createCheckbox` which can be used to create a custom 
 
 ```jsx
 // import the styles
-import { Root, Indicator, Icon, Label, Group } from './components/checkbox';
+import {
+  Root,
+  Indicator,
+  Icon,
+  Label,
+  Group,
+} from '../ui-components/Checkbox/styled-components';
 
 // import the createCheckbox function
 import { createCheckbox } from '@gluestack-ui/checkbox';
@@ -615,4 +621,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Checkbox` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/checkbox/index.tsx) of the styled `Checkbox` components.
+Default styling of all these components can be found in the `components/Checkbox` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Checkbox/index.tsx) of the styled `Checkbox` components.
