--- a/example/storybook/src/components/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Divider/index.stories.mdx
@@ -137,7 +137,7 @@ For customizing the Divider, you have to map styled view to Divider. You can ref
 
 ```jsx
 // import the styles
-import { Root } from './components/Divider';
+import { Root } from '../ui-components/Divider/styled-components';
 
 // import the createDivider function
 import { createDivider } from '@gluestack-ui/divider';
@@ -151,4 +151,4 @@ const Divider = createDivider({
 export default () => <Divider />;
 ```
 
-Default styling of the component can be found in the `components/Divider` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/box/index.tsx) of the styled `Divider` component.
+Default styling of the component can be found in the `ui-components/Divider` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Divider/index.tsx) of the styled `Divider` component.
