--- a/example/storybook/src/components/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/FormControl/index.stories.mdx
@@ -297,7 +297,7 @@ import {
   LabelAstrick,
   Helper,
   HelperText,
-} from './components/FormControl';
+} from '../ui-components/FormControl/styled-components';
 
 // import the createFormControl function
 import { createFormControl } from '@gluestack-ui/form-control';
@@ -335,4 +335,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/FormControl` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/ui-components/FormControl/index.tsx) of the styled `FormControl` components.
+Default styling of all these components can be found in the `components/FormControl` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/FormControl/index.tsx) of the styled `FormControl` components.
