--- a/example/storybook/src/components/Image/index.stories.mdx
+++ b/example/storybook/src/components/Image/index.stories.mdx
@@ -146,4 +146,4 @@ const Image = Root;
 export default () => <Image />;
 ```
 
-Default styling of the component can be found in the `components/Image` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Image/index.tsx) of the styled `Image` component.
+Default styling of the component can be found in the `ui-components/Image` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Image/index.tsx) of the styled `Image` component.
