--- a/example/storybook/src/components/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Pressable/index.stories.mdx
@@ -23,7 +23,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Pressable` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Pressable
+npx install @gluestack-ui add Pressable
 ```
 
 ## Usage
@@ -108,7 +108,7 @@ For customizing the Pressable, you have to map styled view to Pressable. You can
 
 ```jsx
 // import the styles
-import { Root } from './components/Pressable';
+import { Root } from '../ui-components/Pressable/styled-components';
 
 // mapping the Pressable to root component
 const Pressable = Root;
@@ -121,4 +121,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `components/Pressable` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/pressable/index.tsx) of the styled `Pressable` component.
+Default styling of the component can be found in the `ui-components/Pressable` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Pressable/index.tsx) of the styled `Pressable` component.
