--- a/example/storybook/src/components/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Progress/index.stories.mdx
@@ -23,7 +23,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Progress` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Progress
+npx install @gluestack-ui add Progress
 ```
 
 ## Usage
@@ -103,7 +103,7 @@ For customizing the Progress, you have to map styled view to Progress. You can r
 
 ```jsx
 // import the styles
-import { Root, FilledTrack } from './components/progress';
+import { Root, FilledTrack } from '../ui-components/Progress/styled-components';
 
 // import the createProgress function
 import { createProgress } from '@gluestack-ui/progress';
@@ -122,4 +122,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `components/Progress` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/progress/index.tsx) of the styled `Progress` component.
+Default styling of the component can be found in the `ui-components/Progress` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Progress/index.tsx) of the styled `Progress` component.
