--- a/example/storybook/src/components/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/index.stories.mdx
@@ -1,9 +1,5 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/Progress" />
+<Meta title="components/Provider" />
 
 # Progress
-
-<Canvas style={{ height: 200 }}>
-  <Story id="components-stories-progress--progress-story" />
-</Canvas>
