--- a/example/storybook/src/components/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Slider/index.stories.mdx
@@ -24,7 +24,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Slider` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Slider
+npx install @gluestack-ui add Slider
 ```
 
 ## Usage
@@ -54,7 +54,7 @@ export default () => (
     showArgsController={false}
     metaData={{
       code: `
-<Slider>
+<Slider value={50}>
   <Slider.Track>
     <Slider.FilledTrack />
   </Slider.Track>
@@ -154,7 +154,7 @@ import {
   Track,
   FilledTrack,
   ThumbInteraction,
-} from './components/slider';
+} from '../ui-components/Slider/styled-components';
 
 // import the createSlider function
 import { createSlider } from '@gluestack-ui/slider';
@@ -179,4 +179,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `components/Slider` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/slider/index.tsx) of the styled `Slider` component.
+Default styling of the component can be found in the `ui-components/Slider` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Slider/index.tsx) of the styled `Slider` component.
