--- a/example/storybook/src/components/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Spinner/index.stories.mdx
@@ -21,7 +21,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Spinner` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Spinner
+npx install @gluestack-ui add Spinner
 ```
 
 ## Usage
@@ -87,7 +87,7 @@ We have a function called `createSpinner` which can be used to create a custom `
 
 ```jsx
 // import the styles
-import { Root } from './components/Spinner';
+import { Root } from '../ui-components/Spinner/styled-components';
 
 // import the createSpinner function
 import { createSpinner } from '@gluestack-ui/spinner';
@@ -101,4 +101,4 @@ const Spinner = createSpinner({
 export default () => <Spinner />;
 ```
 
-Default styling of all these components can be found in the `components/Spinner` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/spinner/index.tsx) of the styled `Spinner` components.
+Default styling of all these components can be found in the `components/Spinner` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Spinner/index.tsx) of the styled `Spinner` components.
