--- a/example/storybook/src/components/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Switch/index.stories.mdx
@@ -23,7 +23,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Switch` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Switch
+npx install @gluestack-ui add Switch
 ```
 
 ## Usage
@@ -122,7 +122,7 @@ We have a function called `createSwitch` which can be used to create a custom sw
 
 ```jsx
 // import the styles
-import { Root } from './components/Switch';
+import { Root } from '../ui-components/Switch/styled-components';
 
 // import the createSwitch function
 import { createSwitch } from '@gluestack-ui/switch';
@@ -136,4 +136,4 @@ const Switch = createSwitch({
 export default () => <Switch />;
 ```
 
-Default styling of all these components can be found in the `components/Switch` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/switch/index.tsx) of the styled `Switch` components.
+Default styling of all these components can be found in the `components/Switch` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Switch/index.tsx) of the styled `Switch` components.
