--- a/example/storybook/src/components/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Toast/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Toast` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Toast
+npx install @gluestack-ui add Toast
 ```
 
 ## Usage
@@ -316,7 +316,11 @@ We have a function called `createToast` which can be used to create a custom toa
 
 ```jsx
 // import the styles
-import { Root, Title, Description } from './components/Toast';
+import {
+  Root,
+  Title,
+  Description,
+} from '../ui-components/Toast/styled-components';
 
 // import the createToast function
 import { createToast, createToastHook } from '@gluestack-ui/toast';
@@ -355,4 +359,4 @@ export default () => {
 };
 ```
 
-Default styling of all these components can be found in the `components/Toast` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/toast/index.tsx) of the styled `Toast` components.
+Default styling of all these components can be found in the `components/Toast` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Toast/index.tsx) of the styled `Toast` components.
